# aoc

./: .gitignore  pyproject.toml
2024/: .gitignore  Makefile  requirements.txt
2024/src/1/: solution.py
2024/src/10/: solution.py  solution_2.py
2024/src/11/: solution.py
2024/src/13/: solution.py  solution_1.py
2024/src/14/: out.txt  solution.py
2024/src/15/: input.test-3.txt  solution.py
2024/src/17/: solution.py
2024/src/18/: solution.py
2024/src/19/: solution.py
2024/src/20/: solution.py
2024/src/22/: solution_2.py
2024/src/24/: solution.py
2024/src/3/: solution.py
2024/src/5/: solution.py
2024/src/6/: solution.py  solution_2.py
2024/src/7/: solution.py
2024/src/8/: solution.py
2025/: pyproject.toml
2025/src/1/: solution.py
2025/src/10/: solution.py
2025/src/11/: solution.py
2025/src/12/: solution.py
2025/src/2/: solution.py
2025/src/3/: solution.py
2025/src/4/: solution.py
2025/src/5/: solution.py
2025/src/6/: solution.py
2025/src/7/: solution.py
2025/src/8/: solution.py
2025/src/9/: solution.py
src/12/: solution.py
src/15/: input.test-4.txt  solution_2.py
src/16/: solution.py
src/2/: solution.py
src/21/: solution.py
src/22/: solution_1.py
src/23/: solution.py
src/25/: solution.py
src/4/: solution.py
src/5/: solution_2.py
src/9/: solution.py  solution_2.py
