[project]
name = "aod"
version = "0.0.1"
requires-python = ">=3.13"


[tool.ruff]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "dist",
    "venv"
]

line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pyright]
exclude = [
    "**/.*",
    "**/venv",
]
