[project]
name = "aoc"
version = "0.0.1"
requires-python = ">=3.13"


dependencies = [
    "pre-commit==4.5.0",
    "ruff==0.14.7",
    "pyright==1.1.407",
    "numpy",
    "networkx",
]


[tool.ruff]

exclude = [
    ".git",
    ".hg",
    ".ruff_cache",
    ".venv",
    ".vscode",
]
line-length = 100

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pyright]
exclude = [
    ".venv",
]
